# newton-visualizer

./: .gitignore  README.md  d  pyproject.toml  requirements.txt
docs/: advanced-plotting-design.md  architecture.md  cli-design.md  convergence-plot-design.md  newton-method.md  notebook-design.md  parser-design.md  plotting-design.md  solver-design.md
examples/: plot_advanced.py
notebooks/: newton_method_exploration.ipynb  notebook-plan.md
src/newton_visualizer/: cli.py  parser.py  plotting.py  solver.py
src/newton_visualizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_advanced_plotting.py  test_cli.py  test_convergence_plot.py  test_parser.py  test_plotting.py  test_solver.py
